--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cors": "^2.8.5",
     "css-loader": "^5.2.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.4.1",
